criacao JS, CSS e um doc de texto

--- a/exemplo01.html
+++ b/exemplo01.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>exemplo 01</title>
+<link rel="stylesheet" href="css/estilo.css">
+<script src="js/app.js" type="text/javascript"></script>
     </head>
     <body>
         <h1>Primeiro exemplo com o Git</h1>
